2004-11-13  Zoltan Varga  <vargaz@freemail.hu>

	* cil-opcodes.xml: Add missing mono_save_lmf and mono_restore_lmf.

2004-05-20  Zoltan Varga  <vargaz@freemail.hu>

	* opcode.def: Add mono_save_lmf and mono_restore_lmf.

2004-05-11  Zoltan Varga  <vargaz@freemail.hu>

	* opcode.def: Add mono_func2.

2004-03-04  Lluis Sanchez Gual  <lluis@ximian.com>

	* opcode.def, cil-opcodes.xml: Added two new opcodes for type checking:
	mono_cisinst and mono_ccastclass.

Thu May 29 12:52:40 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* opcode.def, cil-opcodes.xml: fix opcode entries.

Wed Sep 5 15:54:47 CEST 2001 Paolo Molaro <lupus@ximian.com>

	* opcode.def: cvs add to reduce build dependencies for
	people using the snapshots or cvs.

Wed Jul 11 18:50:12 CEST 2001 Paolo Molaro <lupus@ximian.com>

	* cil-opcodes.xml: change duplicate unused entry.

Mon Jul  2 15:31:31 CEST 2001 Paolo Molaro <lupus@ximian.com>

	* cil-opcodes.xml: use a more proper XML format (single root tag).
	* make-opcodes-def.pl: use XML::Parser, remove debugging print that
	broke compilation, corrected opcode byte len.

2001-07-01  Miguel de Icaza  <miguel@ximian.com>

	* cil-opcodes.xml: New file that describes the CIL opcodes in
	XML format.

	* make-opcodes-def.pl: Perl script that parses the above file and
	generates a Annex V/C.2 compliant opcode.def file.

